--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -75,9 +75,9 @@ runs:
           id: find_python_cmd
           shell: bash -el {0}
           run: |
-              if [[ "${{ inputs.use-free-thread-python }}" == "true" ]]; then
+              if [ "${{ inputs.use-free-thread-python }}" == "true" ]; then
                   echo "TORCH_SUPPORTED=false" >> $GITHUB_ENV
-              else
+              fi
               if [ "$RUNNER_OS" == "Windows" ]; then
                   pythonCMD=python
               else
