--- a/conf/config.properties
+++ b/conf/config.properties
@@ -19,25 +19,25 @@
 #
 
 ####################
-### 基本配置
+### ????
 ####################
-# iginx 绑定的 ip
+# iginx ??? ip
 ip=0.0.0.0
 
-# iginx 绑定的端口
+# iginx ?????
 port=6888
 
-# iginx 本身的用户名
+# iginx ??????
 username=root
 
-# iginx 本身的密码
+# iginx ?????
 password=root
 
 ##########################
-### 数据库配置
+### ?????
 ##########################
 
-# 数据库列表，使用','分隔不同实例
+# ????????','??????
 #storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
 storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_read_only=false#dir=data#data.config.write.buffer.size=104857600#data.config.write.buffer.timeout=1s#dummy_dir=dummy#dummy.struct=LegacyFilesystem#dummy.config.chunk_size_in_bytes=1048576#dummy.config.memory_pool_size=100#client.connectPool.maxTotal=100
@@ -46,55 +46,56 @@ storageEngineList=127.0.0.1#6668#filesystem#iginx_port=6888#has_data=false#is_re
 #storageEngineList=127.0.0.1#27017#mongodb#uri="mongodb://127.0.0.1:27017/?maxPoolSize=200&maxIdleTimeMS=60000&waitQueueTimeoutMS=50000"#has_data=false#schema.sample.size=1000#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=20000#data_db=1#dummy_db=0
 #storageEngineList=127.0.0.1#19530#VectorDB#protocol=grpc#has_data=false#is_read_only=false#timeout=5000#topk=3
+#storageEngineList=127.0.0.1#1521#relational#engine=oracle#username=system#password=Oracle123#has_data=false
 
-# 底层数据库类名
+# ???????
 databaseClassNames=iotdb12=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage,influxdb=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage,filesystem=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage,relational=cn.edu.tsinghua.iginx.relational.RelationalStorage,mongodb=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage,redis=cn.edu.tsinghua.iginx.redis.RedisStorage,vectordb=cn.edu.tsinghua.iginx.vectordb.MilvusStorage
 
 ##########################
-### 分片配置
+### ????
 ##########################
 
-# 写入的副本个数
+# ???????
 replicaNum=0
 
-# 分片策略
+# ????
 policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
 
-# 重分片时，新分片的结束时间多加的间距，单位为秒
+# ???????????????????????
 reshardFragmentTimeMargin=60
 
 ##########################
-### 统计信息配置
+### ??????
 ##########################
 
-#统计信息收集类
+#???????
 # statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
 
-# 统计信息打印间隔，单位毫秒
+# ?????????????
 # statisticsLogInterval=5000
 
 ##########################
-### Session 配置
+### Session ??
 ##########################
 
-# thrift线程池最小线程数量
+# thrift?????????
 minThriftWorkerThreadNum = 20
 
-# thrift线程池最大线程数量
+# thrift?????????
 maxThriftWrokerThreadNum = 2147483647
 
 ##########################
-### 逻辑层配置
+### ?????
 ##########################
 
-# 约束
+# ??
 constraintChecker=naive
 
-# 逻辑层优化策略
+# ???????
 queryOptimizer=rbo
 
-# 优化器规则
+# ?????
 ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagationRule=on,DistinctEliminateRule=on,\
   ConstantFoldingRule=on,FilterPushDownRule=on,JoinFactorizationRule=on,SetTransformPushDownPathUnionJoinRule=on,InFilterTransformRule=on,\
   OuterJoinEliminateRule=on
@@ -102,99 +103,99 @@ ruleBasedOptimizer=NotFilterRemoveRule=on,ColumnPruningRule=on,ConstantPropagati
 #ruleBasedOptimizer=AllowNullColumnRule=on
 
 ##########################
-### 执行层配置
+### ?????
 ##########################
 
-# 内存任务执行线程池
+# ?????????
 memoryTaskThreadPoolSize=200
 
-# 每个存储节点对应的工作线程数
+# ??????????????
 physicalTaskThreadPoolSizePerStorage=100
 
-# 每个存储节点任务最大堆积数
+# ?????????????
 maxCachedPhysicalTaskPerStorage=500
 
-# 物理层优化策略
+# ???????
 physicalOptimizer=naive
 
 enablePushDown=true
 
 useStreamExecutor=false
 
-# ParallelFilter触发行数
+# ParallelFilter????
 parallelFilterThreshold=10000
-# ParallelGroupBy触发行数
+# ParallelGroupBy????
 parallelGroupByRowsThreshold=10000
-# ParallelApplyFunc触发分组数
+# ParallelApplyFunc?????
 parallelApplyFuncGroupsThreshold=1000
-# ParallelGroupBy线程池大小
+# ParallelGroupBy?????
 parallelGroupByPoolSize=5
-# ParallelGroupBy线程池数量
+# ParallelGroupBy?????
 parallelGroupByPoolNum=5
-# ParallelGroupBy线程池数量
+# ParallelGroupBy?????
 streamParallelGroupByWorkerNum=5
 
 ####################
-### Migration 相关配置
+### Migration ????
 ####################
 
-# 迁移时，每次迁移数据行数
+# ????????????
 migrationBatchSize=100
 
-# 按序列维度切分分片时，每次最多分成多少片
+# ????????????????????
 maxReshardFragmentsNum=3
 
-# 按序列维度切分分片时，时间序列负载高于平均值的最大差值倍数
+# ?????????????????????????????
 maxTimeseriesLoadBalanceThreshold=2
 
-# 迁移策略类名
+# ??????
 #migrationPolicyClassName=cn.edu.tsinghua.iginx.migration.SimulationBasedMigrationPolicy
 migrationPolicyClassName=cn.edu.tsinghua.iginx.migration.GreedyMigrationPolicy
 
 ##########################
-### 分片清理配置
+### ??????
 ##########################
 
-# 是否开启监控系统
+# ????????
 enableMonitor=false
 
-# 监控系统判断间隔时间（单位: s）
+# ?????????????: s?
 loadBalanceCheckInterval=3
 
-# 是否开启分片清理
+# ????????
 enableFragmentCompaction=false
 
-# 分片合并的写入负载阈值（小于该阈值的分片将被删除或合并）
+# ????????????????????????????
 fragmentCompactionWriteThreshold=1000
 
-# 分片合并的查询负载阈值（小于该阈值的分片将被合并）
+# ?????????????????????????
 fragmentCompactionReadThreshold=1000
 
-# 分片合并的查询负载阈值比例（小于该阈值的分片将被合并）
+# ???????????????????????????
 fragmentCompactionReadRatioThreshold=0.1
 
 ####################
-### 元数据配置
+### ?????
 ####################
 
-# 目前支持 zookeeper, etcd
-# 文件是默认的存储后端，方便部署
+# ???? zookeeper, etcd
+# ???????????????
 metaStorage=zookeeper
 
-# 如果使用 zookeeper 作为元数据存储后端，需要提供
+# ???? zookeeper ??????????????
 zookeeperConnectionString=127.0.0.1:2181
 
-# 如果使用 etcd 作为元数据存储后端，需要提供，如果有多个 etcd 实例，以逗号分隔
+# ???? etcd ???????????????????? etcd ????????
 #etcdEndpoints=http://localhost:2379
 
-# 是否开启元数据内存管理
+# ???????????
 enableMetaCacheControl=false
 
-# 分片缓存最大内存限制，单位为 KB，默认 128 MB
+# ?????????????? KB??? 128 MB
 fragmentCacheThreshold=131072
 
 ##########################
-### 内存控制
+### ????
 ##########################
 
 enableMemoryControl=false
@@ -208,59 +209,59 @@ systemMemoryThreshold=0.9
 systemCpuThreshold=0.9
 
 ####################
-### REST 服务配置
+### REST ????
 ####################
 
-# rest 绑定的 ip
+# rest ??? ip
 restIp=0.0.0.0
 
-# rest 绑定的端口
+# rest ?????
 restPort=7888
 
-# 是否启用 rest 服务
+# ???? rest ??
 enableRestService=true
 
-# 乱序数据 margin, 单位是秒
+# ???? margin, ????
 disorderMargin=10
 
-# rest 异步执行并发数
+# rest ???????
 asyncRestThreadPool=100
 
 ##########################
-### Python配置
+### Python??
 ##########################
-# python脚本启动命令
-# 在Windows上需将python3改为python
+# python??????
+# ?Windows???python3??python
 # pythonCMD=python
-# 在unix上，建议使用"which python"查询出的绝对路径，如下所示
+# ?unix??????"which python"?????????????
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
 pythonCMD=python3
 
-# 是否初始化配置文件内指定的UDF/Transform
+# ?????????????UDF/Transform
 needInitBasicUDFFunctions=false
 
-# UDF定义文件夹存储路径（相对或绝对），文件夹内的文件需要按以下格式进行编写
+# UDF???????????????????????????????????
 # %defaultUDFDir%
-#   |- udf_list         (udf函数列表及元信息文件)
-#   |- python_scripts/   (python脚本文件夹)
-#       |- xxx.py       (python脚本)
+#   |- udf_list         (udf??????????)
+#   |- python_scripts/   (python?????)
+#       |- xxx.py       (python??)
 defaultUDFDir=udf_funcs
 
 ##########################
-### Transform配置
+### Transform??
 ##########################
-# 流式执行时，每批数据的大小
+# ?????????????
 batchSize=50
-# Transform任务执行线程池
+# Transform???????
 transformTaskThreadPoolSize=10
-# Transform最大重试次数
+# Transform??????
 transformMaxRetryTimes=3
 
-# 定时任务的yaml脚本的保存位置
+# ?????yaml???????
 defaultScheduledTransformJobDir=transform_jobs
 
 ####################
-### MQTT 配置
+### MQTT ??
 ####################
 
 enableMqtt=false
@@ -276,7 +277,7 @@ mqttPayloadFormatter=cn.edu.tsinghua.iginx.mqtt.JsonPayloadFormatter
 mqttMaxMessageSize=1048576
 
 ##########################
-### SimplePolicy 策略配置
+### SimplePolicy ????
 ##########################
 
 reAllocatePeriod=300000
@@ -285,12 +286,12 @@ enableStorageGroupValueLimit=true
 
 storageGroupValueLimit=200.0
 
-# 是否允许通过环境变量设置参数
+# ??????????????
 enableEnvParameter=false
 
 #################
-### 文件读写配置
+### ??????
 #################
 
-# 读取csv文件时，每批数据的行数
+# ??csv???????????
 batchSizeImportCsv=10000
