--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -26,7 +26,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Oracle"]'
             timeout-minutes:
                 description: "The timeout minutes for the job"
                 type: number
@@ -89,6 +89,7 @@ jobs:
                   PostgreSQL-ports: 5432 5433 5434
                   Redis-ports: 6379 6380 6381
                   VectorDB-ports: 19530 19531 19532
+                  Oracle-ports: 1521 1522 1523
 
             - name: Install IGinX with Maven
               shell: bash
