--- a/.github/workflows/standalone-test-no-optimizer.yml
+++ b/.github/workflows/standalone-test-no-optimizer.yml
@@ -27,12 +27,12 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Oracle"]'
             timeout-minutes:
                 description: "The timeout minutes for the job"
                 type: number
                 required: false
-                default: 40
+                default: 100
 
 jobs:
     Union-DB-Test-No-Optimizer:
