--- a/dataSource/relational/pom.xml
+++ b/dataSource/relational/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>dameng-jdbc</artifactId>
             <version>1.8-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.ojdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>19.3.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
