--- a/.github/actions/dbRunner/action.yml
+++ b/.github/actions/dbRunner/action.yml
@@ -37,6 +37,10 @@ inputs:
         description: "VectorDB ports"
         required: false
         default: 19530
+    Oracle-ports:
+        description: "Oracle ports"
+        required: false
+        default: 1521
 
 runs:
     using: "composite" # Mandatory parameter
@@ -154,3 +158,14 @@ runs:
           uses: ./.github/actions/service/dameng
           with:
               ports: ${{ inputs.Dameng-ports }}
+
+        - if: inputs.DB-name=='Oracle'
+          name: Setup DB
+          uses: ./.github/actions/setup/oracle
+
+        - if: inputs.DB-name == 'Oracle'
+          id: oracleService
+          name: Start Oracle Service
+          uses: ./.github/actions/service/oracle
+          with:
+              ports: ${{ inputs.Oracle-ports }}
