--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -26,12 +26,12 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "Oracle"]'
             timeout-minutes:
                 description: "The timeout minutes for the job"
                 type: number
                 required: false
-                default: 35
+                default: 100
             close-optimizer:
                 description: "Whether to close the optimizer"
                 type: string
@@ -90,6 +90,7 @@ jobs:
                   Redis-ports: 6379 6380 6381
                   VectorDB-ports: 19530 19531 19532
                   Dameng-ports: 5236 5237 5238
+                  Oracle-ports: 1521 1522 1523
 
             - name: Install IGinX with Maven
               shell: bash
