--- a/dataSource/relational/src/main/resources/mysql-meta.properties
+++ b/dataSource/relational/src/main/resources/mysql-meta.properties
@@ -34,15 +34,15 @@
 
 # 配置MySQL META以供JDBCMeta读取
 
-# 驱动类
+# ???
 driver_class=com.mysql.cj.jdbc.Driver
-# 默认数据库
+# ?????
 default_database=mysql
-# 系统数据库，用于过滤
+# ??????????
 system_databases=performance_schema,information_schema,sys
-# 用于包裹表名和字段名的引号
+# ?????????????
 quote=`
-# 删除数据库的SQL语句
+# ??????SQL??
 drop_database_statement=DROP DATABASE IF EXISTS %s;
 # 创建数据库的SQL语句
 create_database_statement=CREATE DATABASE %s;
@@ -60,22 +60,22 @@ query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
 delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d);
 # 在JDBC使用getTables时是否需要加引号
 jdbc_need_quote=true
-# upsert语句中间部分
+# upsert??????
 upsert_statement= ON DUPLICATE KEY UPDATE 
-# upsert语句后面部分格式
+# upsert????????
 upsert_conflict_statement= %s = VALUES(%s)
-# 获取数据库列表的SQL语句
+# ????????SQL??
 database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
-# 是否支持full join
+# ????full join
 is_support_full_join=false
-# filter中正则匹配的符号
+# filter????????
 regex_like_symbol=REGEXP
-# filter中不匹配正则表达式的符号
+# filter????????????
 not_regex_like_symbol=NOT REGEXP
-# jdbc元数据获取是否支持特殊字符识别
+# jdbc???????????????
 jdbc_support_special_char=true
 
-# 配置MySQL DataTypeTransformer
+# ??MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
 MEDIUMINT=IGinX-INTEGER
