--- a/dataSource/relational/src/main/resources/oracle-meta.properties
+++ b/dataSource/relational/src/main/resources/oracle-meta.properties
@@ -21,61 +21,50 @@
 # ??MySQL META??JDBCMeta??
 
 # ???
-driver_class=com.oceanbase.jdbc.Driver
-# ?????
-default_database=oceanbase
+driver_class=oracle.jdbc.driver.OracleDriver
+# ????? #orcl #FREEPDB1
+default_database=ORCLPDB
 # ??????????
-system_databases=test,mysql,information_schema
+system_databases=SYS,SYSTEM,PDBADMIN,SYSRAC,XS$NULL,GSMCATUSER,MDDATA,SYSBACKUP,REMOTE_SCHEDULER_AGENT,GSMUSER,OJVMSYS,DIP,LBACSYS,SYSKM,DGPDB_INT,OUTLN,SYS$UMF,SYSDG,DBSNMP,APPQOSSYS,VECSYS,DBSFWUSER,GGSYS,ANONYMOUS,CTXSYS,DVSYS,DVF,AUDSYS,GSMADMIN_INTERNAL,GGSHAREDCAP,OLAPSYS,MDSYS,XDB,WMSYS
 # ?????????????
-quote=`
+quote="
 # ??????SQL??
-drop_database_statement=DROP DATABASE IF EXISTS %s;
-# ??????SQL??
-create_database_statement=CREATE DATABASE %s;
+drop_database_statement=DROP USER %s CASCADE
+# ?????
+create_database_statement=CREATE USER %s
+# ??????
+grant_privileges_statement=GRANT CREATE SESSION,CREATE TABLE,RESOURCE,UNLIMITED TABLESPACE TO %s
 # ???
-create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s));
+create_table_statement=CREATE TABLE %s (%s %s NOT NULL, %s %s, PRIMARY KEY(%s))
 # ?????
-alter_table_add_column_statement=ALTER TABLE %s ADD %s %s;
+alter_table_add_column_statement=ALTER TABLE %s ADD (%s %s)
 # ?????
-alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s;
-# ???
-query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s;
-#
-query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s;
+alter_table_drop_column_statement=ALTER TABLE %s DROP COLUMN %s
 # ?????
-delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d);
+query_table_statement = SELECT %s, %s FROM %s %s ORDER BY %s
+# ?????
+query_table_without_key_statement = SELECT %s FROM %s %s ORDER BY %s
+# ?????
+insert_table_statement = INSERT INTO %s ( %s ) VALUES ( %s )
+# ?????
+update_table_statement = UPDATE %s SET %s WHERE %s = %s
+# ?????
+delete_table_statement = UPDATE %s SET %s = null WHERE (%s >= %d AND %s < %d)
 # ?JDBC??getTables????????
 jdbc_need_quote=false
 # upsert??????
-upsert_statement= ON DUPLICATE KEY UPDATE
+upsert_statement=
 # upsert????????
-upsert_conflict_statement= %s = VALUES(%s)
+upsert_conflict_statement=
 # ????????SQL??
-database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
+database_query_sql=SELECT username as DATNAME FROM dba_users
 # ????full join
-is_support_full_join=false
+is_support_full_join=true
 # filter????????
-regex_like_symbol=REGEXP
+regex_like_symbol=REGEXP_LIKE
 # filter????????????
-not_regex_like_symbol=NOT REGEXP
-# jdbc??????????????
+not_regex_like_symbol=NOT REGEXP_LIKE
+# jdbc???????????????
 jdbc_support_special_char=false
 
-# ??MySQL DataTypeTransformer
-TINYINT=IGinX-BOOLEAN
-SMALLINT=IGinX-INTEGER
-MEDIUMINT=IGinX-INTEGER
-INT=IGinX-INTEGER
-BIGINT=IGinX-LONG
-INTEGER=IGinX-INTEGER
-FLOAT=IGinX-FLOAT
-DOUBLE=IGinX-DOUBLE
-DECIMAL=IGinX-DOUBLE
-
-
-IGinX-INTEGER=INTEGER
-IGinX-FLOAT=FLOAT(12,6)
-IGinX-DOUBLE=DOUBLE(22,11)
-IGinX-BOOLEAN=TINYINT
-IGinX-BINARY=TEXT
-IGinX-LONG=BIGINT
+# ?? OracleLDataTypeTransformer
