fix(relational): fix the shell of Windows as cmd

--- a/.github/actions/setup/dameng/action.yml
+++ b/.github/actions/setup/dameng/action.yml
@@ -19,7 +19,7 @@ runs:
 
         - if: runner.os == 'Windows'
           name: Install Docker
-          shell: wsl-run {0}
+          shell: cmd
           run: |
               sudo apt install apt-transport-https ca-certificates curl software-properties-common -y
               curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
