--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -89,6 +89,7 @@ jobs:
                   PostgreSQL-ports: 5432 5433 5434
                   Redis-ports: 6379 6380 6381
                   VectorDB-ports: 19530 19531 19532
+                  Dameng-ports: 5236 5237 5238
 
             - name: Install IGinX with Maven
               shell: bash
