--- a/.github/actions/service/freeThreadConda/action.yml
+++ b/.github/actions/service/freeThreadConda/action.yml
@@ -17,7 +17,7 @@ runs:
               run-post: "false"
 
         # currently we can only install free-thread python 3.13 by conda-forge. latest miniconda only supports 3.12
-        # thus in action steps afterward, remember to 'conda activate $ENV_NAME' at start if conda should be used
+        # thus in action steps ahead, remember to 'conda activate $ENV_NAME' at start if conda should be used
         - name: Check channels & install python3.13
           shell: bash -el {0}
           run: |
