--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -40,21 +40,21 @@ jobs:
         uses: ./.github/workflows/standalone-test.yml
         with:
             metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            os-matrix: '["ubuntu-latest", "windows-latest"]'
             db-matrix: '["VectorDB"]'
             timeout-minutes: 300
     standalone-test-no-optimizer-vectordb:
         uses: ./.github/workflows/standalone-test-no-optimizer.yml
         with:
             metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            os-matrix: '["ubuntu-latest", "windows-latest"]'
             db-matrix: '["VectorDB"]'
             timeout-minutes: 300
     db-ce-vectordb:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            os-matrix: '["ubuntu-latest", "windows-latest"]'
             db-matrix: '["VectorDB"]'
             functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
             timeout-minutes: 360
@@ -62,7 +62,7 @@ jobs:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
-            os-matrix: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            os-matrix: '["ubuntu-latest", "windows-latest"]'
             db-matrix: '["VectorDB"]'
             functest: "NewSessionIT,SQLCompareIT,TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,CompactionIT,TimePrecisionIT,PySessionIT"
             timeout-minutes: 360
