--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -54,7 +54,7 @@ runs:
           shell: wsl-run {0}
           run: |
               for port in ${{ inputs.ports }}; do
-                docker run -d -p $port:5236 --restart=always \ 
+                docker run -d -p $port:5236 --restart=always \
                   --name=${{ inputs.version }}-$port \
                   -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
                   -e PAGE_SIZE=16 \
@@ -62,7 +62,7 @@ runs:
                   -e LOG_SIZE=1024 \
                   -e UNICODE_FLAG=1 \
                   -e INSTANCE_NAME=dm8_test \
-                  -v mnt/c/opt/data:/opt/dmdbms/data \
+                  -v /mnt/c/opt/data:/opt/dmdbms/data \
                   dm8_single:dm8_20241022_rev244896_x86_rh6_64
               done
         - if: runner.os == 'Windows'
