fix: fix the docker run in macOS

--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -12,7 +12,7 @@ inputs:
 runs:
     using: "composite"
     steps:
-        - if: runner.os == 'Linux' || runner.os == 'macOS'
+        - if: runner.os == 'Linux'
           name: Run Dameng Database container
           shell: bash
           run: |
@@ -29,6 +29,25 @@ runs:
                   -v /opt/data:/opt/dmdbms/data \
                   dm8_single:dm8_20241022_rev244896_x86_rh6_64
               done
+      
+        - if: runner.os == 'macOS'
+          name: Run Dameng Database container
+          shell: bash
+          run: |
+              for port in ${{ inputs.ports }}; do
+                docker run -d -p $port:5236 --restart=always \
+                  --name=${{ inputs.version }}-$port \
+                  --privileged=true \
+                  -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
+                  -e PAGE_SIZE=16 \
+                  -e EXTENT_SIZE=32 \
+                  -e LOG_SIZE=1024 \
+                  -e UNICODE_FLAG=1 \
+                  -e INSTANCE_NAME=dm8_test \
+                  -v /Users/runner/data:/opt/dmdbms/data \
+                  dm8_single:dm8_20241022_rev244896_x86_rh6_64
+              done
+
         - if: runner.os == 'Linux' || runner.os == 'macOS'
           name: Verify Dameng Database is running
           id: dmContainer
@@ -49,6 +68,7 @@ runs:
                   fi
                 done
               done
+
         - if: runner.os == 'Windows'
           name: Run Dameng Database container
           shell: wsl-run {0}
