--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -44,7 +44,7 @@ runs:
                   -e LOG_SIZE=1024 \
                   -e UNICODE_FLAG=1 \
                   -e INSTANCE_NAME=dm8_test \
-                  -v ${{ github.workspace }}/data:/opt/dmdbms/data \
+                  -v data_volume_$port:/opt/dmdbms/data \
                   dm8_single:dm8_20241022_rev244896_x86_rh6_64
               done
 
