--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -124,18 +124,10 @@ runs:
 
         - if: inputs.Set-Filter-Fragment-OFF=='true'
           name: Set FragmentPruningByFilterRule OFF
-          shell: bash
-          run: |
-              if [ "$RUNNER_OS" == "Linux" ]; then
-                  sudo sed -i 's/ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on/ruleBasedOptimizer=NotFilterRemoveRule=on/g' ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-              elif [ "$RUNNER_OS" == "Windows" ]; then
-                sed -i 's/ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on/ruleBasedOptimizer=NotFilterRemoveRule=on/g' ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-              elif [ "$RUNNER_OS" == "macOS" ]; then
-                  sudo sed -i '' 's/ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on/ruleBasedOptimizer=NotFilterRemoveRule=on/g' ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-              else
-                  echo "$RUNNER_OS is not supported"
-                  exit 1
-              fi
+          uses: ./.github/actions/edit
+          with:
+              paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
+              statements: s/ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on/ruleBasedOptimizer=NotFilterRemoveRule=on/g
 
         - if: inputs.Set-ColumnPruning-ON=='true'
           name: Set ColumnPruningRule ON
@@ -147,18 +139,10 @@ runs:
 
         - if: inputs.Set-AggPushDown-OFF=='true'
           name: Set AggPushDownRule OFF
-          shell: bash
-          run: |
-              if [ "$RUNNER_OS" == "Linux" ]; then
-                  sudo sed -i 's/AggPushDownRule=on/AggPushDownRule=off/g' ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-              elif [ "$RUNNER_OS" == "Windows" ]; then
-                sed -i 's/AggPushDownRule=on/AggPushDownRule=off/g' ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-              elif [ "$RUNNER_OS" == "macOS" ]; then
-                  sudo sed -i '' 's/AggPushDownRule=on/AggPushDownRule=off/g' ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-${VERSION}/conf/config.properties
-              else
-                  echo "$RUNNER_OS is not supported"
-                  exit 1
-              fi
+          uses: ./.github/actions/edit
+          with:
+              paths: ${{ inputs.Root-Dir-Path }}/core/target/iginx-core-*/conf/config.properties
+              statements: s/AggPushDownRule=on/AggPushDownRule=off/g
 
         - name: Change Log Conf
           uses: ./.github/actions/edit
