--- a/dataSource/relational/src/main/resources/postgresql-meta.properties
+++ b/dataSource/relational/src/main/resources/postgresql-meta.properties
@@ -62,6 +62,7 @@ SERIAL8=IGinX-LONG
 FLOAT4=IGinX-FLOAT
 DECIMAL=IGinX-DOUBLE
 FLOAT8=IGinX-DOUBLE
+NUMERIC=IGinX-DOUBLE
 
 # IGinX types 2 pg types
 IGinX-INTEGER=INTEGER
