fix: fix dameng relationalStorage and add restart and shutup

--- a/.github/actions/service/dameng/action.yml
+++ b/.github/actions/service/dameng/action.yml
@@ -30,28 +30,7 @@ runs:
                   dm8_single:dm8_20241022_rev244896_x86_rh6_64
               done
 
-        - if: runner.os == 'macOS'
-          name: Run Dameng Database container
-          shell: bash
-          run: |
-              docker volume create dameng_data
-              for port in ${{ inputs.ports }}; do
-                docker run -d -p $port:5236 \
-                  --platform linux/amd64 \
-                  --restart=always \
-                  --name=${{ inputs.version }}-$port \
-                  --privileged=true \
-                  -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
-                  -e PAGE_SIZE=16 \
-                  -e EXTENT_SIZE=32 \
-                  -e LOG_SIZE=1024 \
-                  -e UNICODE_FLAG=1 \
-                  -e INSTANCE_NAME=dm8_test \
-                  -v dameng_data:/opt/dmdbms/data \
-                  dm8_single:dm8_20241022_rev244896_x86_rh6_64
-              done
-
-        - if: runner.os == 'Linux' || runner.os == 'macOS'
+        - if: runner.os == 'Linux'
           name: Verify Dameng Database is running
           id: dmContainer
           shell: bash
@@ -88,6 +67,7 @@ runs:
                   -v /mnt/c/opt/data:/opt/dmdbms/data \
                   dm8_single:dm8_20241022_rev244896_x86_rh6_64
               done
+
         - if: runner.os == 'Windows'
           name: Verify Dameng Database is running
           id: dmContainerWin
