--- a/.github/actions/tpchSingleTest/action.yml
+++ b/.github/actions/tpchSingleTest/action.yml
@@ -49,17 +49,24 @@ runs:
         - name: Run SQL Warmup on Old IGinX
           if: inputs.status != 'ok'
           shell: bash -el {0}
+          working-directory: IGinX
           run: mvn test -q -Dtest=SQLWarmupIT -DfailIfNoTests=false -P-format
 
         - name: Run TPCH Test on Old IGinX
           if: inputs.status != 'ok'
           shell: bash -el {0}
-          run: mvn test -q -Dtest=TPCHOldIT -DfailIfNoTests=false -P-format
+          working-directory: IGinX
+          run: |
+              cp -f ../test/src/test/resources/tpch/runtimeInfo/newTimeCosts.txt test/src/test/resources/tpch/runtimeInfo/newTimeCosts.txt
+              mvn test -q -Dtest=TPCHOldIT -DfailIfNoTests=false -P-format
+              cp -f test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt ../test/src/test/resources/tpch/runtimeInfo/failedQueryIds.txt
+              cp -f test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt ../test/src/test/resources/tpch/runtimeInfo/iterationTimes.txt
 
         - name: Show Old IGinX log
           if: always() && inputs.status != 'ok'
           shell: bash
-          run: cat IGinX/iginx-*.log
+          working-directory: IGinX
+          run: cat iginx-*.log
 
         - name: Stop Old IGinX
           if: inputs.status != 'ok'
@@ -70,6 +77,7 @@ runs:
         - name: Get Test Result
           id: get
           shell: bash
+          working-directory: IGinX
           run: |
               if [ -f test/src/test/resources/tpch/runtimeInfo/status.txt ]; then
                   STATUS=$(cat test/src/test/resources/tpch/runtimeInfo/status.txt)
