--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -62,7 +62,7 @@ Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHist
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
 VectorDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.vectordb.VectorDBHistoryDataGenerator
 Oracle_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.oracle.OracleHistoryDataGenerator
-Dameng_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.DamengHistoryDataGenerator
+Dameng_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.dameng.DamengHistoryDataGenerator
 
 # DB-CE port mapping, oriPort,expPort,readOnlyPort
 IoTDB12_port=6667,6668,6669
