--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -24,10 +24,10 @@
 driver_class=dm.jdbc.driver.DmDriver
 
 # 默认数据库
-default_database=DAMENG
+default_database=SYSDBA
 
 # 系统数据库，用于过滤
-system_databases=SYSDBA,SYS,DBA,OUTLN,DBSNMP,PUBLIC,USER
+system_databases=SYS,CTISYS,SYSAUDITOR,SYSSSO
 
 # 用于包裹表名和字段名的引号
 quote="
