--- a/dataSource/relational/pom.xml
+++ b/dataSource/relational/pom.xml
@@ -61,9 +61,9 @@
             <version>19.3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>dm.jdbc</groupId>
-            <artifactId>DmJdbcDriver8</artifactId>
-            <version>1.0</version>
+            <groupId>cn.edu.tsinghua.iginx</groupId>
+            <artifactId>dameng-jdbc</artifactId>
+            <version>1.8-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
