remove oracle datasource from dameng datasource

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,7 +1,7 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
 storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis,VectorDB
-relationalStorageEngineList=PostgreSQL,MySQL,Oracle,Dameng
+relationalStorageEngineList=PostgreSQL,MySQL,Dameng
 
 # the test for every engine
 test-list=UserPermissionIT,DataSourceIT,SQLSessionIT,OptimizerIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT,PySessionIT,HostUtilsTest
@@ -24,7 +24,6 @@ MongoDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClea
 Redis-config=isSupportDiffTypeHistoryData=false,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 MySQL-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 VectorDB-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
-Oracle-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 Dameng-config=isSupportDiffTypeHistoryData=true,isSupportKey=false,isAbleToClearData=true,isAbleToDelete=true,isAbleToShowColumns=true,isSupportChinesePath=true,isSupportNumericalPath=true,isSupportSpecialCharacterPath=true
 
 # DataSources Test Config
@@ -37,7 +36,6 @@ Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root
 VectorDB_mock=127.0.0.1#19530#vectordb#protocol=grpc#has_data=false#is_read_only=false#timeout=5000
-Oracle_mock=127.0.0.1#1521#relational#engine=oracle#has_data=false#username=system#password=Oracle123
 Dameng_mock=127.0.0.1#5236#relational#engine=dameng#has_data=false#username=SYSDBA#password=SYSDBA001
 
 # class name for each DB
@@ -49,7 +47,6 @@ MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 MySQL_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 VectorDB_class=cn.edu.tsinghua.iginx.vectordb.MilvusStorage
-Oracle_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 Dameng_class=cn.edu.tsinghua.iginx.relational.RelationalStorage
 
 # class name for history data generator
@@ -61,7 +58,6 @@ MongoDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mongodb.Mongo
 Redis_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.redis.RedisHistoryDataGenerator
 MySQL_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.mysql.MySQLHistoryDataGenerator
 VectorDB_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.vectordb.VectorDBHistoryDataGenerator
-Oracle_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.oracle.OracleHistoryDataGenerator
 Dameng_data_gen_class=cn.edu.tsinghua.iginx.integration.expansion.dameng.DamengHistoryDataGenerator
 
 # DB-CE port mapping, oriPort,expPort,readOnlyPort
@@ -73,7 +69,6 @@ MongoDB_port=27017,27018,27019
 Redis_port=6379,6380,6381
 MySQL_port=3306,3307,3308
 VectorDB_port=19530,19531,19532
-Oracle_port=1521,1522,1523
 Dameng_port=5236,5237,5238
 
 # Local test stand-alone
