--- a/.github/actions/setup/dameng/action.yml
+++ b/.github/actions/setup/dameng/action.yml
@@ -9,14 +9,6 @@ inputs:
 runs:
     using: "composite"
     steps:
-        - if: runner.os == 'macOS'
-          name: Install Docker on MacOS
-          shell: bash
-          run: |
-              brew update 
-              brew install colima docker qemu
-              colima start --arch x86_64 --vm-type=vz --vz-rosetta --mount-type=virtiofs --memory 5
-
         - if: runner.os == 'Windows'
           uses: vedantmgoyal9/setup-wsl2@main
 
@@ -24,31 +16,7 @@ runs:
           run: apt update && apt upgrade -y
           shell: wsl-run {0}
 
-        #        - if: runner.os == 'Linux' || runner.os == 'macOS'
-        #          name: Download and Install Dameng JDBC Driver
-        #          shell: bash
-        #          run: |
-        #              wget https://github.com/LeanMaX/IGinX-resources/raw/refs/heads/master/DmJdbcDriver8.jar
-        #              mvn install:install-file \
-        #              -DgroupId=dm.jdbc \
-        #              -DartifactId=DmJdbcDriver8 \
-        #              -Dversion=1.0 \
-        #              -Dpackaging=jar \
-        #              -Dfile=DmJdbcDriver8.jar
-        #
-        #        - if: runner.os == 'Windows'
-        #          name: Download and Install Dameng JDBC Driver
-        #          shell: cmd
-        #          run: |
-        #              curl -L -o DmJdbcDriver8.jar https://github.com/LeanMaX/IGinX-resources/raw/refs/heads/master/DmJdbcDriver8.jar
-        #              mvn install:install-file ^
-        #              -DgroupId=dm.jdbc ^
-        #              -DartifactId=DmJdbcDriver8 ^
-        #              -Dversion=1.0 ^
-        #              -Dpackaging=jar ^
-        #              -Dfile=DmJdbcDriver8.jar
-
-        - if: runner.os == 'Linux' || runner.os == 'macOS'
+        - if: runner.os == 'Linux'
           name: Download Dameng Database Docker image and Load Dameng Database container
           shell: bash
           run: |
